--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">FinalProject-ApartTalk</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    
+    <string name="find_id"><u>아이디 찾기</u></string>
+    <string name="find_password"><u>비밀번호 찾기</u></string>
+    <string name="not_register">아직 아파트톡 회원이 아니신가요?</string>
+    <string name="sign_in"><u>회원가입</u></string>
+    <string name="login">로그인</string>
 </resources>
