--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">FinalProject-ApartTalk</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="type_community">
+        <item>질문</item>
+        <item>거래</item>
+        <item>기타</item>
+    </string-array>
 </resources>
