--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,18 @@
     <string name="app_name">FinalProject-ApartTalk</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string-array name="reservation_time">
+        <item>09:00 ~ 10:00</item>
+        <item>10:00 ~ 11:00</item>
+        <item>11:00 ~ 12:00</item>
+        <item>12:00 ~ 13:00</item>
+        <item>13:00 ~ 14:00</item>
+        <item>14:00 ~ 15:00</item>
+        <item>15:00 ~ 16:00</item>
+        <item>16:00 ~ 17:00</item>
+        <item>17:00 ~ 18:00</item>
+        <item>18:00 ~ 19:00</item>
+    </string-array>
 </resources>
