--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,102 @@
         <item>기타</item>
 
     </string-array>
+
+
+    <string name="terms_of_service">
+        1. 목적\n
+        이 이용약관은 아파트톡 (이하 "본 앱")의 이용과 관련하여 본 앱과 이용자 간의 권리와 의무 및 책임사항을 규정함을 목적으로 합니다.\n\n
+
+
+        2. 정의\n
+
+        "본 앱"은 아파트 커뮤니티를 위한 애플리케이션으로서, 방문주차 예약, 공지사항 확인 등의 기능을 제공합니다.\n
+        "이용자"란 본 앱에 접속하여 이 약관에 따라 본 앱이 제공하는 서비스를 받는 회원 및 비회원을 말합니다.\n\n
+
+
+        3. 서비스의 제공 및 변경\n
+
+        본 앱은 다음과 같은 서비스를 제공합니다:\n
+        아파트 일정 공지 서비스\n
+        이용시설 예약 서비스\n
+        커뮤니티 서비스\n
+        중고 거래 서비스\n
+        투표 서비스\n
+        안내 방송 서비스\n
+        소방 점검 서비스\n
+        방문주차 예약 서비스\n
+        공지사항 확인 서비스\n
+
+        본 앱은 필요한 경우 서비스의 내용을 변경할 수 있으며, 이 경우 변경 사항을 사전에 공지합니다.\n\n
+
+
+        4. 이용자의 의무\n
+
+        이용자는 본 앱을 통해 얻은 정보를 본인의 개인적인 용도로만 사용해야 하며,\n 이를 제3자에게 제공하거나 상업적으로 이용해서는 안 됩니다.\n
+        이용자는 다음 행위를 하여서는 안 됩니다:\n
+        타인의 개인정보를 도용하는 행위\n
+        본 앱의 운영을 방해하는 행위\n
+        법령에 위반되는 행위\n\n
+
+
+        5. 개인정보 보호\n
+        본 앱은 이용자의 개인정보를 보호하기 위해 노력하며, 개인정보 처리방침에 따라 이용자의 개인정보를 보호하고 적절히 처리합니다.\n\n
+
+
+        6. 책임의 제한\n
+
+        본 앱은 무료로 제공되는 서비스와 관련하여 이용자에게 발생한 손해에 대해 책임을 지지 않습니다.\n
+        본 앱은 서비스의 중단, 지연, 오류, 정보의 유출 등으로 인한 손해에 대해 책임을 지지 않습니다.\n\n
+
+
+        7. 기타\n
+
+        본 약관에 명시되지 않은 사항에 대해서는 관련 법령 또는 관행에 따릅니다.\n
+        본 약관의 해석 및 본 약관과 관련된 분쟁은 대한민국 법을 따르며, 본 앱의 주소지를 관할하는 법원을 전속 관할 법원으로 합니다.\n\n
+
+
+        부칙\n
+        이 약관은 2024년 5월 24일부터 시행됩니다.\n
+    </string>
+
+
+    <string name="privacy_policy">
+        1. 수집하는 개인정보 항목\n
+        본 앱은 서비스 제공을 위해 다음과 같은 개인정보를 수집합니다:\n
+        - 이름, 전화번호, 이메일 주소 등 기본 정보\n
+        - 방문 주차 예약 시 필요한 차량 정보\n
+        - 기타 서비스 이용 시 필요한 정보\n\n
+
+        2. 개인정보의 수집 및 이용 목적\n
+        본 앱은 수집한 개인정보를 다음의 목적을 위해 사용합니다:\n
+        - 서비스 제공 및 운영\n
+        - 이용자 문의 및 민원 처리\n
+        - 공지사항 전달\n
+        - 기타 서비스 제공과 관련된 목적\n\n
+
+        3. 개인정보의 보유 및 이용 기간\n
+        본 앱은 개인정보를 수집 및 이용 목적이 달성된 후에는 해당 정보를 지체 없이 파기합니다.\n
+        단, 관련 법령에 따라 보관해야 하는 경우에는 그러지 않습니다.\n\n
+
+        4. 개인정보의 제3자 제공\n
+        본 앱은 이용자의 동의 없이 개인정보를 제3자에게 제공하지 않습니다.\n
+        단, 법령에 의거해 필요한 경우에는 예외로 합니다.\n\n
+
+        5. 개인정보 보호를 위한 노력\n
+        본 앱은 이용자의 개인정보를 보호하기 위해 다음과 같은 노력을 기울이고 있습니다:\n
+        - 개인정보의 암호화\n
+        - 접근 통제 및 권한 관리\n
+        - 보안 프로그램 설치 및 관리\n\n
+
+        6. 이용자의 권리\n
+        이용자는 언제든지 자신의 개인정보에 접근하고 수정할 수 있으며, 개인정보 삭제를 요청할 수 있습니다.\n
+        이를 위해 본 앱의 고객센터로 연락해 주시기 바랍니다.\n\n
+
+        7. 개인정보처리방침의 변경\n
+        본 개인정보처리방침은 법령이나 본 앱의 정책에 따라 변경될 수 있으며, 변경 사항은 본 앱을 통해 공지합니다.\n\n
+
+        부칙\n
+        이 개인정보처리방침은 2024년 5월 24일부터 시행됩니다.\n\n
+
+    </string>
 </resources>
