--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,13 @@
     <string name="app_name">FinalProject-ApartTalk</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    
-    <string name="find_id"><u>아이디 찾기</u></string>
-    <string name="find_password"><u>비밀번호 찾기</u></string>
-    <string name="not_register">아직 아파트톡 회원이 아니신가요?</string>
-    <string name="sign_in"><u>회원가입</u></string>
-    <string name="login">로그인</string>
+
+    <!-- permission fragment-->
+    <string name="permission_Title">아파트톡 접근 권한 안내</string>
+    <string name="permission_SubTitle">편리한 아파트톡 이용을 위해 권한을 허용해주세요</string>
+    <string name="permission_notification_Explain">알림 기능 필요 시 접근</string>
+    <string name="permission_Location_Explain">지도 사용 시 접근</string>
+    <string name="permission_Photo_Explain">사진 촬영 시 접근</string>
+    <string name="permission_Camera_Explain">사진 첨부 시 접근</string>
+    <string name="permission_Explain">접근 권한은 해당 기능 이용 시 허용이 필요하며, 허용하지 않아도 해당 기능을 제외한 서비스 이용이 가능합니다. 휴대폰 \'설정\' 에서도 접근 권한을 변경하실 수 있습니다.</string>
 </resources>
