--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,4 +139,7 @@
         이 개인정보처리방침은 2024년 5월 24일부터 시행됩니다.\n\n
 
     </string>
+
+    <string name="ApartTalk_App_Name">아파트톡</string>
+
 </resources>
